--- a/examples/01/package.json
+++ b/examples/01/package.json
@@ -20,9 +20,13 @@
     "@babel/preset-react": "^7.13.13",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.4",
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
+    "ts-loader": "^9.1.2",
+    "typescript": "^4.2.4",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
