TypeScript をテストできるようにした

--- a/examples/01/tsconfig.json
+++ b/examples/01/tsconfig.json
@@ -39,5 +39,5 @@
        strictPropertyInitialization）を有効化する */
     "strict": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "__tests__/**/*"]
 }
