--- a/examples/01/package.json
+++ b/examples/01/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
+    "tsc": "tsc -p ./tsconfig.json --noEmit",
     "test": "jest"
   },
   "keywords": [],
