--- a/examples/01/package.json
+++ b/examples/01/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
+    "lint": "eslint src __tests__ --ext ts --ext tsx",
     "tsc": "tsc -p ./tsconfig.json --noEmit",
     "test": "jest"
   },
@@ -25,7 +26,16 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.4",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
     "ts-loader": "^9.1.2",
