--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
     "lint": "eslint src __tests__ --ext ts --ext tsx",
+    "format": "prettier --write .",
     "tsc": "tsc -p ./tsconfig.json --noEmit",
     "test": "jest"
   },
@@ -38,6 +39,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
+    "prettier": "^2.3.0",
     "ts-loader": "^9.1.2",
     "typescript": "^4.2.4",
     "webpack": "^5.37.0",
