--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "format": "prettier --write .",
     "tsc": "tsc -p ./tsconfig.json --noEmit",
     "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "{src,__tests__}/**/*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "npm run lint",
+      "npm run test"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -42,7 +50,9 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "html-webpack-plugin": "^5.3.1",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
+    "lint-staged": "^11.0.0",
     "prettier": "^2.3.0",
     "ts-loader": "^9.1.2",
     "typescript": "^4.2.4",
