--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "tsc": "tsc -p ./tsconfig.json --noEmit",
     "test": "jest",
     "test:coverage": "jest --coverage",
+    "cy:run": "cypress run",
+    "test:e2e:run": "start-server-and-test start http://localhost:8080 cy:run",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -54,6 +56,7 @@
     "jest": "^26.6.3",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.0",
+    "start-server-and-test": "^1.12.2",
     "ts-loader": "^9.1.2",
     "typescript": "^4.2.4",
     "webpack": "^5.37.0",
