--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "tsc": "tsc -p ./tsconfig.json --noEmit",
     "test": "jest",
     "test:coverage": "jest --coverage",
+    "cy:open": "cypress open",
     "cy:run": "cypress run",
     "test:e2e:run": "start-server-and-test start http://localhost:8080 cy:run",
+    "test:e2e:dev": "start-server-and-test start http://localhost:8080 cy:open",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -25,6 +27,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0"
@@ -57,12 +60,17 @@
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^11.0.0",
+    "msw": "^0.28.2",
     "prettier": "^2.3.0",
     "start-server-and-test": "^1.12.2",
+    "test-data-bot": "^0.8.0",
     "ts-loader": "^9.1.2",
     "typescript": "^4.2.4",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "msw": {
+    "workerDirectory": "dist"
   }
 }
